--- a/OPTIMUM-Neuro_tracking_gabi_june20192.Rmd
+++ b/OPTIMUM-Neuro_tracking_gabi_june20192.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "OPTIMUM-Neuro conference call 2019-02-15"
+title: "OPTIMUM-Neuro conference call 2019-07-19"
 output: html_document
 always_allow_html: yes
 ---
@@ -28,8 +28,8 @@ always_allow_html: yes
 source('functions.R')
 
 #read in data
-  df <- read.csv('/home/gherman/Downloads/OPTIMUMMainDatabaseF_DATA_2019-06-19_1022.csv', na.strings=c("","NA")) #contains all but MRI
-  mri <- read.csv('/home/gherman/Downloads/OPTIMUMMainDatabaseF_DATA_2019-06-19_1023.csv', na.strings=c("","NA")) #contains just MRI
+  df <- read.csv('/home/gherman/Downloads/OPTIMUMMainDatabaseF_DATA_2019-07-18_1516.csv', na.strings=c("","NA")) #contains all but MRI
+  mri <- read.csv('/home/gherman/Downloads/OPTIMUMMainDatabaseF_DATA_2019-07-18_1515.csv', na.strings=c("","NA")) #contains just MRI
   targets <- read.csv('info/OPT_recruitTargets.csv')
   #make sure target data is in proper format
   targets$month <- as.character(targets$month)
@@ -49,7 +49,8 @@ This report is meant to provide a quick overview of the OPTIMUM-Neuro study, to 
 ------
 <br> 
 
-###Recruitment
+
+
 
 ```{r recruitment, echo = FALSE, include = FALSE, warning = FALSE}
 
@@ -90,7 +91,23 @@ recruit_df <- merge(recruit_df, enroll_df, by = c('record_id', 'timepoint'), all
   
 ```
 
+```{r, echo = FALSE, include = FALSE, warning = FALSE}
+
+
+#note to self.... the enrollmrimth thing doesnt really work as the only indicator, it should really be combined with mr_t1 (which is enroll_mri i guess) to give an accurate picture of numbers. 
+
+
+fu_due_list <- recruit_df%>% select(record_id,mri_fu_due, np_fu_due, bld_fu_due) %>% filter(!is.na(mri_fu_due) | !is.na( np_fu_due) | !is.na( bld_fu_due))
+
+fu_df <- recruit_df %>% filter(.,timepoint=="6 mth FU") %>% select(.,-c(enroll_mri, enroll_mri_date)) 
+
+fu_df <- prep_fu_df(fu_df) %>% merge(.,fu_due_list, by=c('record_id'))
   
+```
+
+
+###Recruitment
+
 
 ```{r recruit_table, warning = FALSE, echo = FALSE}
 
@@ -118,6 +135,9 @@ kable(recruit_table, "html", escape = F, align = c('l', 'c', 'c', 'c', 'c', 'c',
 ```
 
 ------
+
+##Progress Reports {.tabset}
+Please switch between the tabs for baseline and 6 month follow-up numbers.
 
 <br>
 
@@ -151,11 +171,46 @@ kable(enroll_table, "html", escape = F, align = c('l', 'c', 'c', 'c', 'c', 'c', 
               
 ```
 
+###6 Month Follow-up 
+
+
+Here, the % column indicates the percentage of participants who have reached the six-month mark of the study who have received their 6 month follow-up assessments.
+
+```{r, echo = FALSE, warning = FALSE}
+
+fu_table <- make_fu_table(fu_df, sites,targets)
+
+#add row names to make like demo table
+fu_table <- cbind(metric = rownames(fu_table), fu_table)
+rownames(fu_table) <- NULL
+
+#turns NAs into dashes
+options(knitr.kable.NA = '--')
+
+#table
+kable(fu_table, "html", escape = F, align = c('l', 'c', 'c', 'c', 'c', 'c', 'c')) %>%
+  kable_styling("hover", "condensed", full_width = T) %>%
+  add_header_above(c(" ", "CU" = 2, "LA" = 2, "UP" = 2, "UT" = 2, "WU" = 2, " ")) %>%
+  group_rows('Neuropsych[note]', 1, 2, label_row_css = "background-color: #ddd; color: 999;") %>%
+  group_rows("Blood[note]", 3, 4, label_row_css = "background-color: #ddd; color: 999;") %>%
+  group_rows("MRI[note]", 5, 6, label_row_css = "background-color: #ddd; color: 999;") %>%
+  column_spec(1, width = "20em", background = '#f5f5f5') %>%
+  add_footnote(c(
+     "`Neuropsych` counts all participants who completed both the follow-up RBANS and D-KEFS in full.",
+     "`Blood` counts all participants who submitted one aliquot of plasma for bloodwork follow-up.",
+     "`MRI` counts all participants who completed the T1 follow-up."), 
+               notation = "number") %>%
+  footnote(general = "Current month captures calendar month. The `%` columns calculate percentage of those due for follow-up who were scanned.")
+```
+
+##
+
 ------
 
-<br>
 
 ###Demographics 
+
+<br>
 
 ```{r demographics, echo = FALSE, warning = FALSE}
 
@@ -182,61 +237,6 @@ demo_table %>%
 rm(demo_df, demo_table)
 
 ```
-
-
-
-
-```{r}
-
-
-#note to self.... the enrollmrimth thing doesnt really work as the only indicator, it should really be combined with mr_t1 (which is enroll_mri i guess) to give an accurate picture of numbers. 
-
-
-fu_due_list <- recruit_df%>% select(record_id,mri_fu_due, np_fu_due, bld_fu_due) %>% filter(!is.na(mri_fu_due) | !is.na( np_fu_due) | !is.na( bld_fu_due))
-
-fu_df <- recruit_df %>% filter(.,timepoint=="6 mth FU") %>% select(.,-c(enroll_mri, enroll_mri_date)) 
-
-fu_df <- prep_fu_df(fu_df) %>% merge(.,fu_due_list, by=c('record_id'))
-
-  #Sooo I'll calculate stuff kind of this way: 
-  sum(fu_df$enroll_mri[fu_df$site.x=='UP'], na.rm=TRUE)
-  
-```
-
-
-I guess I can remove the percentages here, although I may want to do percentage of people who consented 8 or more months ago who are obtaining follow-up!! That'd be cool.
-
-In order to do that, I'll need a df with participant IDs, initial scan date, later scan date, whether it's >= 6 months earlier. 
-
-AFTER HERE IS THE NOT REAL STUFF THAT I SHOULD DELETE OR MOVE AROUND LATER
-```{r}
-
-fu_table <- make_fu_table(fu_df, sites,targets)
-
-```
-
-
-
-
-```{r}
-df1 <- fu_df %>% select(record_id, fu_mri = enroll_mri, fu_mri_date = enroll_mri_date)
-
-
-df2 <- enroll_df %>% select(record_id, enroll_mri, enroll_mri_date)
-
-#testmerged <- merge(df2 ,df1,by=c('record_id'), all=TRUE) %>%
-#  mutate(., fu_due = ifelse(enroll_mri_date %m+% months(6) < Sys.Date(), 1, 0))
-
-#fu_due_list <- testmerged %>% select(record_id,fu_due) 
-
-#fu_df2 <- fu_df %>% merge(.,fu_due_list, by=c('record_id'))
-
-
-```
-
-
-
-TODO: change the MRI coding (because we have options 1 2 and 3 now in the neuro mri form), and also make it not rely on mri date
 
 
 
