--- a/testing_stuff.Rmd
+++ b/testing_stuff.Rmd
@@ -20,7 +20,7 @@ The preview shows you a rendered HTML copy of the contents of the editor. Conseq
 
 
 ```{r}
-fu_df_update <- fu_df %>% select(record_id, enroll_mri, enroll_mri_mthT, mri_fu_due = mri_fu_due.y,mri_fu_7_mos) %>%
+fu_df_update <- fu_df %>% select(record_id, enroll_mri, enroll_mri_mthT, mri_fu_due = mri_fu_due.y,mri_fu_7_mos=mri_fu_7_mos.y) %>%
   mutate_at(vars(enroll_mri, mri_fu_due,mri_fu_7_mos), funs(if_else( is.na(.), 0, .) ) ) %>%
   mutate(., due=(enroll_mri!=1 & mri_fu_due==1), overdue=(enroll_mri!=1 & mri_fu_7_mos==1), complete=(enroll_mri==1))
 
@@ -28,5 +28,16 @@ fu_df_update <- fu_df %>% select(record_id, enroll_mri, enroll_mri_mthT, mri_fu_
 
 ```{r}
 n_expected <- sum(fu_df_update$overdue, na.rm=TRUE)
+n_due <- sum(fu_df_update$due, na.rm=TRUE)
+n_complete <- sum(fu_df_update$complete, na.rm=TRUE)
+
+expected <- sum(recruit_df$enroll_mri, na.rm=TRUE)
+
+due2 <- sum(fu_df_update$mri_fu_due, na.rm=TRUE)
+
+
+#retention <- 
+
+
 ```
 
